crown: Use new bitfrost driver when building

--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -3102,7 +3102,9 @@ CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 #
 # ARM GPU Configuration
 #
+CONFIG_MALI_DDK_VERSION=y
 CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_BIFROST_R19P0_Q=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_MIDGARD_DVFS is not set
 CONFIG_MALI_MIDGARD_ENABLE_TRACE=y
@@ -3136,7 +3138,7 @@ CONFIG_MALI_THEX=y
 # CONFIG_MALI_THEX_R9P0 is not set
 # CONFIG_MALI_THEX_R12P0 is not set
 # CONFIG_MALI_THEX_R15P0 is not set
-CONFIG_MALI_THEX_R16P0=y
+# CONFIG_MALI_THEX_R16P0 is not set
 # CONFIG_MALI_2MB_ALLOC is not set
 CONFIG_MALI_VK_BOOST=y
 # CONFIG_MALI_SEC_JOB_STATUS_CHECK is not set
