--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -46,7 +46,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -582,9 +582,9 @@ CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_LOD_SEC=y
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_LKM_BLOCK=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_LKM_BLOCK is not set
 # CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
 # CONFIG_UH is not set
 # CONFIG_UH_DEBUG is not set
@@ -636,7 +636,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
-CONFIG_FOTA_LIMIT=y
+# CONFIG_FOTA_LIMIT is not set
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -3862,7 +3862,6 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_EMI26 is not set
 # CONFIG_USB_ADUTUX is not set
 # CONFIG_USB_SEVSEG is not set
-# CONFIG_USB_RIO500 is not set
 # CONFIG_USB_LEGOTOWER is not set
 # CONFIG_USB_LCD is not set
 # CONFIG_USB_CYPRESS_CY7C63 is not set
@@ -5252,7 +5251,7 @@ CONFIG_MANDATORY_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_PRIVATE_ENCRYPTION=y
 # CONFIG_FS_CRYPTO_SEC_EXTENSION is not set
-CONFIG_CRYPTO_FIPS=y
+# CONFIG_CRYPTO_FIPS is not set
 # CONFIG_FSCRYPT_SDP is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
