defconfig: disable verity

--- a/arch/arm64/boot/dts/exynos/exynos9810-crownlte_common.dtsi
+++ b/arch/arm64/boot/dts/exynos/exynos9810-crownlte_common.dtsi
@@ -41,7 +41,7 @@
 		};
 	};
 
-	firmware {
+firmware {
 		android {
 			compatible = "android,firmware";
 			fstab {
@@ -50,22 +50,24 @@
 					compatible = "android,system";
 					dev = "/dev/block/platform/11120000.ufs/by-name/SYSTEM";
 					type = "ext4";
-					mnt_flags = "ro";
-					fsmgr_flags = "wait,verify";
+					mnt_flags = "ro,barrier=1";
+					fsmgr_flags = "wait";
+					status = "ok";
 				};
 				vendor {
 					compatible = "android,vendor";
 					dev = "/dev/block/platform/11120000.ufs/by-name/VENDOR";
 					type = "ext4";
-					mnt_flags = "ro";
-					fsmgr_flags = "wait,verify";
+					mnt_flags = "ro,barrier=1";
+					fsmgr_flags = "wait";
+					status = "ok";
 				};
 				odm {
 					compatible = "android,odm";
 					dev = "/dev/block/platform/11120000.ufs/by-name/ODM";
 					type = "ext4";
 					mnt_flags = "ro";
-					fsmgr_flags = "wait,verify";
+					fsmgr_flags = "wait";
 				};
 			};
 		};
