--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -220,7 +220,7 @@ CONFIG_SLUB=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
-CONFIG_DEFERRED_INITCALLS=y
+# CONFIG_DEFERRED_INITCALLS is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_KPROBES is not set
@@ -1534,8 +1534,6 @@ CONFIG_SCSI_UFS_CMD_LOGGING=y
 CONFIG_UFS_DATA_LOG=y
 CONFIG_UFS_DATA_LOG_MAGIC_CODE=y
 CONFIG_SCSI_UFS_EXYNOS=y
-CONFIG_SCSI_UFS_EXYNOS_FMP=y
-CONFIG_SCSI_UFS_EXYNOS_SMU=y
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_SNIC is not set
 # CONFIG_SCSI_DMX3191D is not set
@@ -1661,7 +1659,7 @@ CONFIG_NET_VENDOR_BROADCOM=y
 # CONFIG_BNXT is not set
 CONFIG_NET_VENDOR_BROCADE=y
 # CONFIG_BNA is not set
-CONFIG_NET_VENDOR_CAVIUM=y
+# CONFIG_NET_VENDOR_CAVIUM is not set
 # CONFIG_THUNDER_NIC_PF is not set
 # CONFIG_THUNDER_NIC_VF is not set
 # CONFIG_THUNDER_NIC_BGX is not set
@@ -2239,9 +2237,7 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_EXYNOS is not set
 CONFIG_HW_RANDOM_CAVIUM=y
 CONFIG_HW_RANDOM_EXYNOS_SWD=y
-CONFIG_EXYRNG_FIPS_COMPLIANCE=y
-# CONFIG_EXYRNG_FAIL_POLICY_DISABLE is not set
-CONFIG_EXYRNG_FAIL_POLICY_RESET=y
+# CONFIG_EXYRNG_FIPS_COMPLIANCE is not set
 CONFIG_EXYRNG_USE_CRYPTOMANAGER=y
 # CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
@@ -4027,8 +4023,6 @@ CONFIG_MMC_DW_PLTFM=y
 CONFIG_MMC_DW_EXYNOS=y
 # CONFIG_MMC_DW_DEBUG is not set
 CONFIG_MMC_DW_FORCE_32BIT_SFR_RW=y
-# CONFIG_MMC_DW_EXYNOS_FMP is not set
-# CONFIG_MMC_DW_EXYNOS_SMU is not set
 # CONFIG_MMC_DW_K3 is not set
 # CONFIG_MMC_DW_PCI is not set
 # CONFIG_MMC_VUB300 is not set
@@ -5191,10 +5185,6 @@ CONFIG_SENSORS_FINGERPRINT=y
 # CONFIG_SENSORS_VFS8XXX is not set
 CONFIG_SENSORS_ET5XX=y
 CONFIG_GATOR=m
-CONFIG_FIVE_TEE_DRIVER=y
-# CONFIG_TEE_DRIVER_DEBUG is not set
-CONFIG_FIVE_TRUSTLET_PATH="five/ffffffff000000000000000000000072.tlbin"
-# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP is not set
 
 #
 # MPSD System Intelligence kernel module
@@ -5249,9 +5239,6 @@ CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_MANDATORY_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
-CONFIG_FS_PRIVATE_ENCRYPTION=y
-# CONFIG_FS_CRYPTO_SEC_EXTENSION is not set
-# CONFIG_CRYPTO_FIPS is not set
 # CONFIG_FSCRYPT_SDP is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
@@ -5339,11 +5326,11 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_AFFS_FS is not set
 CONFIG_ECRYPT_FS=y
 # CONFIG_ECRYPT_FS_MESSAGING is not set
-CONFIG_WTL_ENCRYPTION_FILTER=y
-CONFIG_ECRYPTFS_FEK_INTEGRITY=y
-CONFIG_SDP=y
+# CONFIG_WTL_ENCRYPTION_FILTER is not set
+# CONFIG_ECRYPTFS_FEK_INTEGRITY is not set
+# CONFIG_SDP is not set
 # CONFIG_SDP_KEY_DUMP is not set
-CONFIG_DLP=y
+# CONFIG_DLP is not set
 CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
@@ -5666,19 +5653,12 @@ CONFIG_MFC_CHARGER=y
 # CONFIG_MST_TEEGRIS is not set
 CONFIG_MST_LPM_CONTROL=y
 CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
+# CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_TZ_ICCC is not set
-CONFIG_FIVE=y
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
+# CONFIG_FIVE is not set
 # CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_SECURITY_DSMS=y
@@ -5716,7 +5696,7 @@ CONFIG_CRYPTO_RSA=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
-# CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
+CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_GF128MUL=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_NULL2=y
@@ -5725,7 +5705,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=y
+# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
@@ -5825,27 +5805,20 @@ CONFIG_CRYPTO_JITTERENTROPY=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 # CONFIG_CRYPTO_USER_API_RNG is not set
 # CONFIG_CRYPTO_USER_API_AEAD is not set
-CONFIG_CRYPTO_HASH_INFO=y
 # CONFIG_CRYPTO_POST_DEFERRED_INIT is not set
-CONFIG_CRYPTO_POST_LATE_INIT_SYNC=y
+# CONFIG_CRYPTO_POST_LATE_INIT_SYNC is not set
 # CONFIG_CRYPTO_POST_LATE_INIT is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_S5P is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
-CONFIG_EXYNOS_SMU=y
-CONFIG_EXYNOS_FMP=y
-CONFIG_EXYNOS_FMP_FIPS=y
-CONFIG_NODE_FOR_SELFTEST_FAIL=y
-# CONFIG_PANIC_FOR_SELFTEST_FAIL is not set
-CONFIG_ASYMMETRIC_KEY_TYPE=y
-CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
-CONFIG_X509_CERTIFICATE_PARSER=y
+# CONFIG_EXYNOS_SMU is not set
+# CONFIG_EXYNOS_FMP is not set
+# CONFIG_EXYNOS_FMP_FIPS is not set
 # CONFIG_PKCS7_MESSAGE_PARSER is not set
 
 #
 # Certificates for signature checking
 #
-# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -5931,9 +5904,7 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
-CONFIG_SIGNATURE=y
 CONFIG_LIBFDT=y
-CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
