--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -534,7 +534,7 @@ CONFIG_LARGE_DIRTY_BUFFER=y
 CONFIG_MAX_DIRTY_THRESH_PAGES=25600
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_MMAP_READAROUND_LIMIT=0
-CONFIG_RBIN=y
+# CONFIG_RBIN is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
 # CONFIG_PARAVIRT_TIME_ACCOUNTING is not set
@@ -553,8 +553,7 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 #
 # JOP Attack Prevention
 #
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
+# CONFIG_RKP_CFP_JOPP is not set
 
 #
 # ARMv8.1 architectural features
@@ -592,9 +591,9 @@ CONFIG_LOD_SEC=y
 # CONFIG_UH_RKP_8G is not set
 # CONFIG_UH_INFORM is not set
 # CONFIG_UH_RKP_FIMC_TYPE is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
 
 #
 # Userspace binary formats
@@ -1341,7 +1340,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_DEBUG_UID_CPUTIME=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_KNOX_KAP is not set
 # CONFIG_C2PORT is not set
 
@@ -1579,7 +1578,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-# CONFIG_DM_VERITY is not set
+CONFIG_DM_VERITY=y
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
 CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=1
 CONFIG_DM_VERITY_FEC=y
@@ -4371,7 +4370,7 @@ CONFIG_ION_TEST=y
 # CONFIG_ION_OF is not set
 CONFIG_ION_EXYNOS=y
 # CONFIG_ION_EXYNOS_STAT_LOG is not set
-CONFIG_ION_RBIN_HEAP=y
+# CONFIG_ION_RBIN_HEAP is not set
 # CONFIG_ION_EXYNOS_OF is not set
 CONFIG_ANDROID_SWITCH=y
 # CONFIG_STAGING_BOARD is not set
@@ -4612,7 +4611,7 @@ CONFIG_EXYNOS_MCINFO=y
 CONFIG_MCINFO_SYSFS=y
 CONFIG_EXYNOS_SECURE_LOG=y
 CONFIG_SAMSUNG_VST_CAL=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SMC_LOG_THRESHOLD=0
 CONFIG_EXYNOS_SNAPSHOT_LOGGING_SMC_CALL=y
 CONFIG_EXYNOS_HDCP2=y
@@ -5619,10 +5618,10 @@ CONFIG_DEBUG_SET_MODULE_RONX=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 # CONFIG_CORESIGHT is not set
 
 #
@@ -5681,7 +5680,7 @@ CONFIG_FIVE_DEFAULT_HASH_SHA1=y
 CONFIG_FIVE_DEFAULT_HASH="sha1"
 # CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_PROCA=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
